[project]
name = "syncsdk"

[tool.poetry]
name = "syncsdk"
version = "0.1.9"
description = ""
readme = "README.md"
authors = []
keywords = []

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
packages = [
    { include = "sync", from = "src"}
]

[project.urls]
Repository = 'https://github.com/synchronicity-labs/sync-python-sdk'

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.21.2"
pydantic = "^2.0"
typing_extensions = ">= 4.0.0"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
cloudinary = "^1.44.1"
python-multipart = "^0.0.20"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
python-dateutil = "^2.9.0"
types-python-dateutil = "^2.9.0"
ruff = "^0.5.7"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
